--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "type": "lldb",
+            "type": "java",
+            "name": "Current File",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/Driver",
-            "args": [],
-            "cwd": "${workspaceFolder}"
+            "mainClass": "${file}"
+        },
+        {
+            "type": "java",
+            "name": "Driver",
+            "request": "launch",
+            "mainClass": "Driver",
+            "projectName": "b07lab1_c4a3c391"
         }
     ]
 }
